[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oklab-lite"
version = "0.1.0"
description = "Lightweight Oklab color conversions with zero dependencies"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Florian Reh" }
]
keywords = ["color", "oklab", "srgb", "rgb", "image-processing"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
]

dependencies = []
