[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "oklab-lite"
version = "0.1.0"
authors = [
    { name = "Florian Reh" }
]
description = "Lightweight Oklab color conversions with zero dependencies"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["color", "oklab", "srgb", "rgb", "image-processing"]
dependencies = []
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/imaGecko/oklab_py"